--- a/app/index.html
+++ b/app/index.html
@@ -150,10 +150,10 @@
 
   </section>
 
-  <footer class="container">
+  <footer class="container-fluid footer-wrap">
     <div class="row">
       <div class="col-xs-6 col-md-4">
-        <ul class="list-inline">
+        <ul class="footer-nav-links list-inline">
           <li>
             <a href="#">Home</a>
           </li>
@@ -165,15 +165,21 @@
           </li>
         </ul>
       </div>
-      <div class="col-xs-6 col-md-4">
-        <a href="#" class="footer-logo-btn">/*/</a>
+      <div class="col-xs-6 col-md-4 text-center">
+        <a href="#" class="footer-logo-link">
+          <span class="footer-logo"></span>
+        </a>
       </div>
-      <div class="col-xs-6 col-md-4">
+      <div class="col-xs-6 col-md-4 text-right">
         <div class="footer-socials">
-          <button type="button" class="f-social-fb"></button>
-          <button type="button" class="f-social-fb"></button>
+          <a href="#" class="f-social-fb">
+            <span></span>
+          </a>
+          <a href="#" class="f-social-tw">
+            <span></span>
+          </a>
         </div>
-        <span class="copyright">(c) Wanderist 2014</span>
+        <span class="footer-copyright">(c) Wanderist 2014</span>
       </div>
     </div>
 
