[MAJOR] app structure build change

--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
 
 </head>
 
-<body>
+<body ng-app="app" ng-controller="rootCtrl">
 
   <header class="container-fluid">
 
@@ -221,6 +221,9 @@
 
   </footer>
   
+
+  <script src="vendor/requirejs/require.js" data-main="config/main.js"></script>
+ 
 
 
 </body>
