--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -152,14 +151,7 @@
       <div class="col-md-7">
         <div class="user-overview-wrap">
           <h4>Overview</h4>
-          <uib-accordion close-others="oneAtATime">
-            <div uib-accordion-group class="panel-default" is-open="status.open">
-                <uib-accordion-heading>
-                  I can have markup, too! <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
-                </uib-accordion-heading>
-                This is just some content to illustrate fancy headings.
-            </div>
-          </uib-accordion>
+
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
           </p>
@@ -223,8 +215,9 @@
   
 
   <script src="vendor/requirejs/require.js" data-main="config/main.js"></script>
- 
+  <script src="vendor/angular/angular.js"></script>
 
+  <script src="ui/scripts/rootCtrl.js"></script>
 
 </body>
 
