--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,6 @@
 
     <link rel="stylesheet" type="text/css" href="ui/styles/css/main.css">
 
-
 </head>
 
 <body ng-app="app" ng-controller="rootCtrl">
@@ -152,6 +151,30 @@
         <div class="user-overview-wrap">
           <h4>Overview</h4>
 
+<uib-accordion close-others="oneAtATime">
+  <div role="tablist" class="panel-group" >
+
+    <div uib-accordion-group="" class="panel-default ng-scope ng-isolate-scope panel" is-open="status.open">
+      <div role="tab" aria-selected="false" class="panel-heading" ng-keypress="toggleOpen($event)">
+        <h4 class="panel-title">
+          <a role="button" data-toggle="collapse" href="" aria-expanded="false"  class="accordion-toggle" ng-click="toggleOpen()" uib-accordion-transclude="heading" ng-disabled="isDisabled" uib-tabindex-toggle="">
+            <span uib-accordion-header="" ng-class="{'text-muted': isDisabled}" class="ng-binding">
+              <span class="ng-scope">
+              I can have markup, too! 
+              </span><i class="pull-right glyphicon ng-scope glyphicon-chevron-right" ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}" style=""></i>
+            </span>
+          </a>
+        </h4>
+      </div>
+      This is just some content to illustrate fancy headings.
+    </div>
+
+  </div>
+
+</uib-accordion>
+
+
+
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
           </p>
@@ -162,8 +185,54 @@
       </div>
     </div>
 
-    <div class="content-primary-wrap">
-      <p class="text-center">day0 <br>day1 <br>day1 </p>
+    <div class="row content-primary-wrap">
+
+      <uib-accordion close-others="oneAtATime">
+        <div role="tablist" class="panel-group" >
+
+          <div role="tab" aria-selected="false" class="panel-heading trip-heading" ng-keypress="toggleOpen($event)">
+            <h4 class="trip-title text-center">
+              <a role="button" data-toggle="collapse" href="" aria-expanded="false"  class="accordion-toggle" ng-click="toggleOpen()" uib-accordion-transclude="heading" ng-disabled="isDisabled" uib-tabindex-toggle="">
+                <span uib-accordion-header="" ng-class="{'text-muted': isDisabled}" class="ng-binding">
+                  <span class="ng-scope">
+                    Day 1
+                  </span>
+                  <i class="pull-right glyphicon glyphicon-menu-down" ng-class="{'glyphicon-menu-up': status.open, 'glyphicon-chevron-down': !status.open}" style=""></i>
+                </span>
+              </a>
+            </h4>
+          </div>
+
+          <div aria-hidden="false" role="tabpanel" class="panel-collapse in collapse" uib-collapse="!isOpen" aria-expanded="true">
+            <div class="panel-body trip-body">
+
+              <div class="col-sm-6">
+                <div class="trip-body-map-img"></div>
+                <div class="trip-body-lv2-img">
+                  <div class="trip-item-details">
+                    <p>
+                      Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    </p>
+                    <a href="#" class="trip-item-link">
+                      <span class="map-pointer"></span>
+                      Show on the map
+                    </a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-sm-6">
+                <div class="trip-body-lv1-img"></div>
+                <div class="trip-body-lv3-img"></div>
+
+              </div>
+
+            </div>
+          </div>
+
+        </div>
+      </uib-accordion>
+
     </div>
 
     <div class="content-slave-wrap text-center">
