[STYLE] style update for accordion

--- a/app/index.html
+++ b/app/index.html
@@ -219,13 +219,34 @@
                     </a>
                   </div>
                 </div>
+              <span class="trip-timeline"></span>
               </div>
 
               <div class="col-sm-6">
-                <div class="trip-body-lv1-img"></div>
-                <div class="trip-body-lv3-img"></div>
-
+                <div class="trip-body-lv1-img">
+                    <div class="trip-item-details">
+                        <p>
+                         Lorem ipsum dolor sit amet, consectetur
+                        </p>
+                        <a href="#" class="trip-item-link">
+                          <span class="map-pointer"></span>
+                          Show on the map
+                        </a>
+                    </div>
+                </div>
+                <div class="trip-body-lv3-img">
+                    <div class="trip-item-details">
+                        <p>
+                         Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                        </p>
+                        <a href="#" class="trip-item-link">
+                          <span class="map-pointer"></span>
+                          Show on the map
+                        </a>
+                    </div>
+                </div>
               </div>
+
 
             </div>
           </div>
