--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
+      <script src="vendor/angular/angular.js"></script>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
@@ -17,10 +18,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
 
     <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
 
     <link rel="stylesheet" type="text/css" href="ui/styles/css/main.css">
+
 
 </head>
 
@@ -46,6 +47,19 @@
             Details
           </button>
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class="dropup">
+              <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Dropup
+                <span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                <li><a href="#">Action</a></li>
+                <li><a href="#">Another action</a></li>
+                <li><a href="#">Something else here</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="#">Separated link</a></li>
+              </ul>
+            </div>
 <!--             <ul class="nav navbar-nav">
               <li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
               <li><a href="#">Details</a></li>
@@ -150,30 +164,43 @@
       <div class="col-md-7">
         <div class="user-overview-wrap">
           <h4>Overview</h4>
-
-<uib-accordion close-others="oneAtATime">
-  <div role="tablist" class="panel-group" >
-
-    <div uib-accordion-group="" class="panel-default ng-scope ng-isolate-scope panel" is-open="status.open">
-      <div role="tab" aria-selected="false" class="panel-heading" ng-keypress="toggleOpen($event)">
-        <h4 class="panel-title">
-          <a role="button" data-toggle="collapse" href="" aria-expanded="false"  class="accordion-toggle" ng-click="toggleOpen()" uib-accordion-transclude="heading" ng-disabled="isDisabled" uib-tabindex-toggle="">
-            <span uib-accordion-header="" ng-class="{'text-muted': isDisabled}" class="ng-binding">
-              <span class="ng-scope">
-              I can have markup, too! 
-              </span><i class="pull-right glyphicon ng-scope glyphicon-chevron-right" ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}" style=""></i>
+<div ng-controller="rootCtrl">
+  <script type="text/ng-template" id="group-template.html">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title" style="color:#fa39c3">
+          <a href tabindex="0" class="accordion-toggle" ng-click="toggleOpen()" uib-accordion-transclude="heading">
+            <span uib-accordion-header ng-class="{'text-muted': isDisabled}">
+              {{heading}}
             </span>
           </a>
         </h4>
       </div>
-      This is just some content to illustrate fancy headings.
+      <div class="panel-collapse collapse" uib-collapse="!isOpen">
+        <div class="panel-body" style="text-align: right" ng-transclude></div>
+      </div>
     </div>
+  </script>
 
+  <p>
+    <button type="button" class="btn btn-default btn-sm" ng-click="status.open = !status.open">Toggle last panel</button>
+    <button type="button" class="btn btn-default btn-sm" ng-click="status.isFirstDisabled = ! status.isFirstDisabled">Enable / Disable first panel</button>
+  </p>
+
+  <div class="checkbox">
+    <label>
+      <input type="checkbox" ng-model="oneAtATime">
+      Open only one at a time
+    </label>
   </div>
-
+  <uib-accordion close-others="oneAtATime">
+    <div uib-accordion-group class="panel-default" heading="Static Header, initially expanded" is-open="status.isFirstOpen" is-disabled="status.isFirstDisabled">
+      This content is straight in the template.
+    </div>
+    <div uib-accordion-group class="panel-default" heading="{{group.title}}" ng-repeat="group in groups">
+      {{group.content}}
+    </div>
 </uib-accordion>
-
-
 
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -188,12 +215,14 @@
     <div class="row content-primary-wrap">
 
       <uib-accordion close-others="oneAtATime">
-        <div role="tablist" class="panel-group" >
+        <div role="tablist" class="panel-group" uib-accordion-group
+             is-open="status.isFirstOpen" 
+             is-disabled="status.isFirstDisabled">
 
           <div role="tab" aria-selected="false" class="panel-heading trip-heading" ng-keypress="toggleOpen($event)">
             <h4 class="trip-title text-center">
               <a role="button" data-toggle="collapse" href="" aria-expanded="false"  class="accordion-toggle" ng-click="toggleOpen()" uib-accordion-transclude="heading" ng-disabled="isDisabled" uib-tabindex-toggle="">
-                <span uib-accordion-header="" ng-class="{'text-muted': isDisabled}" class="ng-binding">
+                <span uib-accordion-heading="Day 1" ng-class="{'open': status.isFirstOpen}" class="ng-binding">
                   <span class="ng-scope">
                     Day 1
                   </span>
@@ -302,12 +331,14 @@
     </div>
 
   </footer>
+
   
 
   <script src="vendor/requirejs/require.js" data-main="config/main.js"></script>
-  <script src="vendor/angular/angular.js"></script>
+
 
   <script src="ui/scripts/rootCtrl.js"></script>
+
 
 </body>
 
